# AI-Tutor

./: .env.example  .gitignore  LICENSE  pyproject.toml
app/: config.py  main.py
app/api/: tutor.py
app/providers/: base.py  factory.py  mock_provider.py  openai_provider.py
app/services/: markdown_renderer.py  tutor.py
app/static/css/: styles.css
app/templates/: index.html
prompts/: teacher.txt
tests/: test_mock_provider.py
