[project]
name = "ai-tutor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.2.0",
    "fastapi>=0.128.8",
    "jinja2>=3.1.6",
    "markdown>=3.9",
    "openai>=2.45.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.39.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]